--- a/html/dz3/css/style.css
+++ b/html/dz3/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-	width: 1340px;
 	background: #f9f9f9;
 }
 
@@ -14,7 +13,7 @@ a {
 }
 
 .wrapper {
-	max-width: 960px;
+	width: 960px;
 	background: #ffffff;
 	padding: 50px 50px;
 	margin: auto;
@@ -22,13 +21,10 @@ a {
 
 .header {
 	width: 960px;
-	height: 150px;
 	background: #f9ffffff;    
 }
 
 .logo {
-	width: 145px;
-	height: 50px;
 	margin-bottom: 40px;
 }
 
@@ -99,18 +95,17 @@ a {
 }
 
 .container {
-	padding-top: 20px;
+	margin-top: 20px;
 }
 
 .content {
-	width: 720px;
+	width: 700px;
 	float: right;
 	line-height: 1.3;
 	
 }
 
 .img {
-	height: 400px;
 	border: none;
 	margin-bottom: 30px;
 	padding: 0;
